# marketmind

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  SYSTEM.md  analyze_cognitive_load.py  backtest.py  extract_pdf.py  fetch.py  fetch_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  signal.py  signal_cli.py  streamlit_app.py  track_prompt.py  tracker_config.yaml  translate.py
.github/: dependabot.yml
.github/workflows/: ci.yml  cognitive_monitor.yml  lint.yml  security.yml  test.yml
agents/: AuditAgent.md  CoderAgent.md  DocAgent.md  PlannerAgent.md  RefactorAgent.md  TestAgent.md
docs/: analyze_cognitive_load.md  backtest.md  class_intent.md  data.md  engine.md  fetch.md  fetch_data.md  metrics.md  signal.md  strategies.md  streamlit_app.md  track_prompt.md
logs/: prompt_log.md
scripts/: backtest.py  fetch.py  signal.py
src/: data.py  engine.py  metrics.py  pdfextractor.py  translator.py
src/helloworld/: __init__.py
src/my_package/: hello.py
src/strategies/: __init__.py  base.py  bollinger.py  breakout.py  covered_call_median.py  dual_mom.py  eom_bond.py  hfea55.py  ibs.py  leveragedtrend.py  macd.py  median_cc.py  rsi.py
tests/: prepare_fixtures.py  test_bollinger.py  test_breakout.py  test_cli_scripts.py  test_cognitive_monitor.py  test_covered_call_median.py  test_data.py  test_dual_mom.py  test_engine.py  test_eom_bond.py  test_fetch.py  test_framework.py  test_hello.py  test_hfea55.py  test_ibs.py  test_import_cycles.py  test_leveragedtrend.py  test_macd.py  test_median_cc.py  test_metrics.py  test_param_grid.py  test_pdfextractor.py  test_root_scripts.py  test_rsi.py  test_scripts.py  test_translator.py
tests/test_data/: sample_SPY.csv
