[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marketmind"
version = "0.1.0"
description = "Hello World example"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff==0.12.1",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "mypy==1.16.1",
    "coverage==7.9.1",
    "black==25.1.0",
    "pre-commit==4.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_unused_configs = true
strict = true
files = ["src"]
mypy_path = "src"


[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
target-version = ["py311"]
line-length = 88
