[tool.poetry]
name = "marketmind"
version = "0.1.0"
description = "A simple hello world project"
authors = ["Example Author <author@example.com>"]
readme = "README.md"
packages = [{include = "my_package", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^4.1"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "-ra --cov=my_package --cov-report=term-missing"
filterwarnings = ["error"]
testpaths = ["tests"]
