[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marketmind"
version = "0.1.0"
description = "Modern Python project template"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.3.0",
    "yfinance==0.2.64",
    "pyarrow==20.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.1",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "mypy==1.16.1",
    "pandas-stubs==2.3.0.250703",
    "coverage==7.9.1",
    "black==25.1.0",
    "pre-commit==4.2.0",
    "grimp==3.9",
    "types-PyYAML==6.0.12.20250516",
    "pdfminer.six==20250506",
    "pdf2image==1.17.0",
    "pytesseract==0.3.13",
    "Pillow==11.3.0",
    "fpdf2==2.8.3",
]
streamlit = [
    "streamlit==1.46.1",
    "plotly==6.2.0",
]
pdf = [
    "pdfminer.six==20250506",
    "pdf2image==1.17.0",
    "pytesseract==0.3.13",
    "Pillow==11.3.0",
    "fpdf2==2.8.3",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
warn_unused_configs = true
strict = true
files = ["src"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "yfinance"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
target-version = ["py311"]
line-length = 88
